welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur())
                        ^SnakeBuggle:17: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur())
                        ^