welcome.lessons.welcome.traversal.Snake.scala.code
override def run() 
{
	def posfin(): Boolean=
	{
		if (estFaceMur())
			return true
		else if (getDirection()==Direction.EST)
		{
			gauche()
			if (estFaceMur())
				return true
		}
		else if (getDirection()==Direction.OUEST)
		{
			droite()
			if (estFaceMur())
				{return true}
		} else return false
		
	}

	def serpent()
	{
		if (getDirection()==Direction.EST)
		{
			gauche()
			avance()
			gauche()
		}
		else if (getDirection()==Direction.OUEST)
		{
			droite()
			avance()
			droite()
		} else avance()
	}
	
	while (posfin() == false) 
		{
			baisseBrosse()
			serpent()
		}
}
